--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
+  <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet"> 
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
@@ -27,7 +27,7 @@
     <div class="lead">
       <img src="img/equiweatherLOGO.svg" alt="Equi-Weather">
       <button>
-        <p>This is a button.</p>
+        <p>tap for forecast</p>
       </button>
     </div>
 
@@ -39,15 +39,32 @@
   <!-- WEATHER -->
   <section class="weather">
 
-    <div class="head"></div>
+    <div class="head">
+      <div class="logo">
+        <!-- <img src="img/equiweatherLOGO.svg" alt="Equi-Weather"> -->
+      </div>
+      <div class="info">
+        <!-- SHARE -->
+        <!-- ABOUT -->
+      </div>
+    </div>
 
     <div class="current">
       <div class="icon"></div>
-      <div class="detail"></div>
+      <div class="detail">
+        <h1></h1>
+        <p></p>
+        <div class="high"></div>
+        <div class="low"></div>
+        <div class="humidity"></div>
+        <div class="winds"></div>
+        <div class="precip"></div>
+      </div>
     </div>
 
-    <div class="warning"></div>
-
+    <div class="warning">
+      <p></p>
+    </div>
     <div class="week">
       <!-- ACCORDIAN GOES HERE -->
     </div>
