--- a/index.html
+++ b/index.html
@@ -41,11 +41,10 @@
 
     <div class="head">
       <div class="logo">
-        <!-- <img src="img/equiweatherLOGO.svg" alt="Equi-Weather"> -->
+        <img src="img/equiweatherLOGO.svg" alt="Equi-Weather">
       </div>
       <div class="info">
-        <!-- SHARE -->
-        <!-- ABOUT -->
+        <p>About</p>
       </div>
     </div>
 
