--- a/index.html
+++ b/index.html
@@ -62,10 +62,11 @@
     </div>
 
     <div class="warning">
-      <p></p>
+      <p>AAAA</p>
     </div>
+
     <div class="week">
-      <!-- ACCORDIAN GOES HERE -->
+      <!-- ACCORDIAN GOES HERE ? -->
     </div>
 
   </section>
