--- a/index.html
+++ b/index.html
@@ -66,7 +66,63 @@
     </div>
 
     <div class="week">
-      <!-- ACCORDIAN GOES HERE ? -->
+      <h1>7 Day Forecast</h1>
+      <div class="box box0">
+        <div class="icon"></div>
+        <h1></h1>
+        <h2></h2>
+        <div class="hum"></div>
+        <div class="wind"></div>
+        <div class="precip"></div>
+      </div>
+      <div class="box box1">
+        <div class="icon"></div>
+        <h1></h1>
+        <h2></h2>
+        <div class="hum"></div>
+        <div class="wind"></div>
+        <div class="precip"></div>
+      </div>
+      <div class="box box2">
+        <div class="icon"></div>
+        <h1></h1>
+        <h2></h2>
+        <div class="hum"></div>
+        <div class="wind"></div>
+        <div class="precip"></div>
+      </div>
+      <div class="box box3">
+        <div class="icon"></div>
+        <h1></h1>
+        <h2></h2>
+        <div class="hum"></div>
+        <div class="wind"></div>
+        <div class="precip"></div>
+      </div>
+      <div class="box box4">
+        <div class="icon"></div>
+        <h1></h1>
+        <h2></h2>
+        <div class="hum"></div>
+        <div class="wind"></div>
+        <div class="precip"></div>
+      </div>
+      <div class="box box5">
+        <div class="icon"></div>
+        <h1></h1>
+        <h2></h2>
+        <div class="hum"></div>
+        <div class="wind"></div>
+        <div class="precip"></div>
+      </div>
+      <div class="box box6">
+        <div class="icon"></div>
+        <h1></h1>
+        <h2></h2>
+        <div class="hum"></div>
+        <div class="wind"></div>
+        <div class="precip"></div>
+      </div>
     </div>
 
   </section>
