--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div>
 
     <div class="warning">
-      <p>AAAA</p>
+      <p></p>
     </div>
 
     <div class="week">
@@ -71,57 +71,9 @@
         <div class="icon"></div>
         <h1></h1>
         <h2></h2>
-        <div class="hum"></div>
-        <div class="wind"></div>
-        <div class="precip"></div>
-      </div>
-      <div class="box box1">
-        <div class="icon"></div>
-        <h1></h1>
-        <h2></h2>
-        <div class="hum"></div>
-        <div class="wind"></div>
-        <div class="precip"></div>
-      </div>
-      <div class="box box2">
-        <div class="icon"></div>
-        <h1></h1>
-        <h2></h2>
-        <div class="hum"></div>
-        <div class="wind"></div>
-        <div class="precip"></div>
-      </div>
-      <div class="box box3">
-        <div class="icon"></div>
-        <h1></h1>
-        <h2></h2>
-        <div class="hum"></div>
-        <div class="wind"></div>
-        <div class="precip"></div>
-      </div>
-      <div class="box box4">
-        <div class="icon"></div>
-        <h1></h1>
-        <h2></h2>
-        <div class="hum"></div>
-        <div class="wind"></div>
-        <div class="precip"></div>
-      </div>
-      <div class="box box5">
-        <div class="icon"></div>
-        <h1></h1>
-        <h2></h2>
-        <div class="hum"></div>
-        <div class="wind"></div>
-        <div class="precip"></div>
-      </div>
-      <div class="box box6">
-        <div class="icon"></div>
-        <h1></h1>
-        <h2></h2>
-        <div class="hum"></div>
-        <div class="wind"></div>
-        <div class="precip"></div>
+        <div class="humidity"><p></p></div>
+        <div class="winds"><p></p></div>
+        <div class="precip"><p></p></div>
       </div>
     </div>
 
