--- a/index.html
+++ b/index.html
@@ -75,6 +75,54 @@
         <div class="winds"><p></p></div>
         <div class="precip"><p></p></div>
       </div>
+      <div class="box box1">
+        <div class="icon"></div>
+        <h1></h1>
+        <h2></h2>
+        <div class="humidity"><p></p></div>
+        <div class="winds"><p></p></div>
+        <div class="precip"><p></p></div>
+      </div>
+      <div class="box box2">
+        <div class="icon"></div>
+        <h1></h1>
+        <h2></h2>
+        <div class="humidity"><p></p></div>
+        <div class="winds"><p></p></div>
+        <div class="precip"><p></p></div>
+      </div>
+      <div class="box box3">
+        <div class="icon"></div>
+        <h1></h1>
+        <h2></h2>
+        <div class="humidity"><p></p></div>
+        <div class="winds"><p></p></div>
+        <div class="precip"><p></p></div>
+      </div>
+      <div class="box box4">
+        <div class="icon"></div>
+        <h1></h1>
+        <h2></h2>
+        <div class="humidity"><p></p></div>
+        <div class="winds"><p></p></div>
+        <div class="precip"><p></p></div>
+      </div>
+      <div class="box box5">
+        <div class="icon"></div>
+        <h1></h1>
+        <h2></h2>
+        <div class="humidity"><p></p></div>
+        <div class="winds"><p></p></div>
+        <div class="precip"><p></p></div>
+      </div>
+      <div class="box box6">
+        <div class="icon"></div>
+        <h1></h1>
+        <h2></h2>
+        <div class="humidity"><p></p></div>
+        <div class="winds"><p></p></div>
+        <div class="precip"><p></p></div>
+      </div>
     </div>
 
   </section>
