--- a/index.html
+++ b/index.html
@@ -51,14 +51,13 @@
     <div class="current">
       <div class="icon"></div>
       <div class="detail">
-        <h1></h1>
-        <p></p>
         <div class="high"></div>
         <div class="low"></div>
         <div class="humidity"></div>
         <div class="winds"></div>
         <div class="precip"></div>
       </div>
+      <div class="sum"></div>
     </div>
 
     <div class="warning">
@@ -71,9 +70,11 @@
         <div class="icon"></div>
         <h1></h1>
         <h2></h2>
-        <div class="humidity"><p></p></div>
-        <div class="winds"><p></p></div>
-        <div class="precip"><p></p></div>
+        <div class="extra">
+          <div class="humidity"><p></p></div>
+          <div class="winds"><p></p></div>
+          <div class="precip"><p></p></div>
+        </div>
       </div>
       <div class="box box1">
         <div class="icon"></div>
@@ -133,7 +134,9 @@
   <!-- FOOTER -->
   <footer>
     <div class="x"></div>
-    <div class="about"></div>
+    <div class="about">
+      <h1></h1>
+    </div>
     <div class="social"></div>
   </footer>
   <!-- FOOTER -->
