--- a/index.html
+++ b/index.html
@@ -23,14 +23,13 @@
 
   <!-- HEADER -->
   <header>
-
+    <img src='https://images.unsplash.com/flagged/photo-1568381670226-fab8dc323343?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80' alt='Pepi Pitkänen' class='bg'>
     <div class="lead">
       <img src="img/equiweatherLOGO.svg" alt="Equi-Weather">
       <button>
         <p>tap for forecast</p>
       </button>
     </div>
-
   </header>
   <!-- HEADER -->
 
@@ -53,13 +52,9 @@
       <div class="detail">
         <div class="high"></div>
         <div class="low"></div>
-        <div class="humidity"></div>
-        <div class="winds"></div>
-        <div class="precip"></div>
       </div>
       <div class="sum"></div>
     </div>
-
     <div class="warning">
       <p></p>
     </div>
