--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <!-- HEADER -->
   <header>
-    <img src='https://images.unsplash.com/flagged/photo-1568381670226-fab8dc323343?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80' alt='Pepi Pitkänen' class='bg'>
+    <img src='https://images.unsplash.com/photo-1460999158988-6f0380f81f4d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80' class='bg'>
     <div class="lead">
       <img src="img/equiweatherLOGO.svg" alt="Equi-Weather">
       <button>
@@ -75,7 +75,7 @@
       </div>
 
       <div class="warning">
-        <p>warning will go here. yup.</p>
+        <p></p>
       </div>
     </div>
 
