maybe someday i'll be good at this

--- a/index.html
+++ b/index.html
@@ -260,14 +260,18 @@
 
 
 
-  <!-- FOOTER -->
-  <footer>
-    <div class="x"></div>
-    <div class="about">
-      <h1></h1>
+  <!-- ABOUT -->
+  <section class="about">
+    <div class="x">
+      <p>X</p>
     </div>
-    <div class="social"></div>
-  </footer>
+    <h1>About</h1>
+    <p>Equi-Weather is the weather app built specifically for “horse-people”. Built by equestrians for equestrians, our main goal is to keep you and your four-legged-friends safe and ready for whatever mother nature has in store. Each day there is a different notice depending on the day’s outlook, giving you more time to alter any schedules or dig out the winter sheets.</p>
+    <p>In the future, we plan on adding more weather info, as well as an option to personalize the app to multiple locations! (We know what it’s like having to juggle between multiple stables.) Stay tuned for updates!</p>
+    <div class="social">
+      
+    </div>
+  </section>
   <!-- FOOTER -->
 
 
